test/examples/parser.out
Grammar:

Rule 0     S' -> top
Rule 1     nothing -> <empty>
Rule 2     block_expr -> { block_inner }
Rule 3     block_inner -> expr TERM block_inner
Rule 4     block_inner -> expr TERM
Rule 5     top -> expr top
Rule 6     top -> TERM
Rule 7     top -> nothing
Rule 8     expr -> STRING
Rule 9     expr -> NUMBER
Rule 10    expr -> FALSE
Rule 11    expr -> TRUE
Rule 12    expr -> ID
Rule 13    expr -> expr SET expr  [precedence=nonassoc, level=4]
Rule 14    expr -> expr EQ expr  [precedence=nonassoc, level=4]
Rule 15    expr -> expr OR expr  [precedence=right, level=2]
Rule 16    expr -> expr AND expr  [precedence=right, level=3]
Rule 17    expr -> expr DIV expr  [precedence=left, level=6]
Rule 18    expr -> expr MUL expr  [precedence=left, level=6]
Rule 19    expr -> expr SUB expr  [precedence=left, level=5]
Rule 20    expr -> expr ADD expr  [precedence=left, level=5]
Rule 21    expr -> expr LT expr  [precedence=nonassoc, level=1]
Rule 22    expr -> expr GT expr  [precedence=nonassoc, level=1]
Rule 23    expr -> AWAIT expr  [precedence=right, level=7]
Rule 24    expr -> ASYNC expr  [precedence=right, level=7]
Rule 25    expr -> IF expr block_expr rest_if
Rule 26    expr -> ( expr )
Rule 27    expr -> expr ( arglist )
Rule 28    expr -> ID ( paramlist ) block_expr
Rule 29    paramlist -> ID , paramlist
Rule 30    paramlist -> ID
Rule 31    paramlist -> nothing
Rule 32    arglist -> arg_item , arglist
Rule 33    arglist -> arg_item
Rule 34    arglist -> nothing
Rule 35    arg_item -> SYMBOL expr
Rule 36    arg_item -> expr
Rule 37    rest_if -> ELSE block_expr
Rule 38    rest_if -> ELIF expr block_expr rest_if
Rule 39    rest_if -> nothing

Terminals, with rules where they appear:

(                    : 26 27 28
)                    : 26 27 28
,                    : 29 32
ADD                  : 20
AND                  : 16
ASYNC                : 24
AWAIT                : 23
DIV                  : 17
ELIF                 : 38
ELSE                 : 37
EQ                   : 14
FALSE                : 10
GT                   : 22
ID                   : 12 28 29 30
IF                   : 25
LT                   : 21
MUL                  : 18
NUMBER               : 9
OR                   : 15
SET                  : 13
STRING               : 8
SUB                  : 19
SYMBOL               : 35
TERM                 : 3 4 6
TRUE                 : 11
error                : 
{                    : 2
}                    : 2

Nonterminals, with rules where they appear:

arg_item             : 32 33
arglist              : 27 32
block_expr           : 25 28 37 38
block_inner          : 2 3
expr                 : 3 4 5 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 24 25 26 27 35 36 38
nothing              : 7 31 34 39
paramlist            : 28 29
rest_if              : 25 38
top                  : 5 0


state 0

    (0) S' -> . top
    (5) top -> . expr top
    (6) top -> . TERM
    (7) top -> . nothing
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    (1) nothing -> .
    TERM            shift and go to state 3
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13
    $end            reduce using rule 1 (nothing -> .)

    top                            shift and go to state 1
    expr                           shift and go to state 2
    nothing                        shift and go to state 4

state 1

    (0) S' -> top .


state 2

    (5) top -> expr . top
    (13) expr -> expr . SET expr
    (14) expr -> expr . EQ expr
    (15) expr -> expr . OR expr
    (16) expr -> expr . AND expr
    (17) expr -> expr . DIV expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . SUB expr
    (20) expr -> expr . ADD expr
    (21) expr -> expr . LT expr
    (22) expr -> expr . GT expr
    (27) expr -> expr . ( arglist )
    (5) top -> . expr top
    (6) top -> . TERM
    (7) top -> . nothing
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    (1) nothing -> .
    SET             shift and go to state 15
    EQ              shift and go to state 16
    OR              shift and go to state 17
    AND             shift and go to state 18
    DIV             shift and go to state 19
    MUL             shift and go to state 20
    SUB             shift and go to state 21
    ADD             shift and go to state 22
    LT              shift and go to state 23
    GT              shift and go to state 24
    (               shift and go to state 25
    TERM            shift and go to state 3
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    $end            reduce using rule 1 (nothing -> .)

    expr                           shift and go to state 2
    top                            shift and go to state 14
    nothing                        shift and go to state 4

state 3

    (6) top -> TERM .
    $end            reduce using rule 6 (top -> TERM .)


state 4

    (7) top -> nothing .
    $end            reduce using rule 7 (top -> nothing .)


state 5

    (8) expr -> STRING .
    SET             reduce using rule 8 (expr -> STRING .)
    EQ              reduce using rule 8 (expr -> STRING .)
    OR              reduce using rule 8 (expr -> STRING .)
    AND             reduce using rule 8 (expr -> STRING .)
    DIV             reduce using rule 8 (expr -> STRING .)
    MUL             reduce using rule 8 (expr -> STRING .)
    SUB             reduce using rule 8 (expr -> STRING .)
    ADD             reduce using rule 8 (expr -> STRING .)
    LT              reduce using rule 8 (expr -> STRING .)
    GT              reduce using rule 8 (expr -> STRING .)
    (               reduce using rule 8 (expr -> STRING .)
    TERM            reduce using rule 8 (expr -> STRING .)
    STRING          reduce using rule 8 (expr -> STRING .)
    NUMBER          reduce using rule 8 (expr -> STRING .)
    FALSE           reduce using rule 8 (expr -> STRING .)
    TRUE            reduce using rule 8 (expr -> STRING .)
    ID              reduce using rule 8 (expr -> STRING .)
    AWAIT           reduce using rule 8 (expr -> STRING .)
    ASYNC           reduce using rule 8 (expr -> STRING .)
    IF              reduce using rule 8 (expr -> STRING .)
    $end            reduce using rule 8 (expr -> STRING .)
    {               reduce using rule 8 (expr -> STRING .)
    )               reduce using rule 8 (expr -> STRING .)
    ,               reduce using rule 8 (expr -> STRING .)


state 6

    (9) expr -> NUMBER .
    SET             reduce using rule 9 (expr -> NUMBER .)
    EQ              reduce using rule 9 (expr -> NUMBER .)
    OR              reduce using rule 9 (expr -> NUMBER .)
    AND             reduce using rule 9 (expr -> NUMBER .)
    DIV             reduce using rule 9 (expr -> NUMBER .)
    MUL             reduce using rule 9 (expr -> NUMBER .)
    SUB             reduce using rule 9 (expr -> NUMBER .)
    ADD             reduce using rule 9 (expr -> NUMBER .)
    LT              reduce using rule 9 (expr -> NUMBER .)
    GT              reduce using rule 9 (expr -> NUMBER .)
    (               reduce using rule 9 (expr -> NUMBER .)
    TERM            reduce using rule 9 (expr -> NUMBER .)
    STRING          reduce using rule 9 (expr -> NUMBER .)
    NUMBER          reduce using rule 9 (expr -> NUMBER .)
    FALSE           reduce using rule 9 (expr -> NUMBER .)
    TRUE            reduce using rule 9 (expr -> NUMBER .)
    ID              reduce using rule 9 (expr -> NUMBER .)
    AWAIT           reduce using rule 9 (expr -> NUMBER .)
    ASYNC           reduce using rule 9 (expr -> NUMBER .)
    IF              reduce using rule 9 (expr -> NUMBER .)
    $end            reduce using rule 9 (expr -> NUMBER .)
    {               reduce using rule 9 (expr -> NUMBER .)
    )               reduce using rule 9 (expr -> NUMBER .)
    ,               reduce using rule 9 (expr -> NUMBER .)


state 7

    (10) expr -> FALSE .
    SET             reduce using rule 10 (expr -> FALSE .)
    EQ              reduce using rule 10 (expr -> FALSE .)
    OR              reduce using rule 10 (expr -> FALSE .)
    AND             reduce using rule 10 (expr -> FALSE .)
    DIV             reduce using rule 10 (expr -> FALSE .)
    MUL             reduce using rule 10 (expr -> FALSE .)
    SUB             reduce using rule 10 (expr -> FALSE .)
    ADD             reduce using rule 10 (expr -> FALSE .)
    LT              reduce using rule 10 (expr -> FALSE .)
    GT              reduce using rule 10 (expr -> FALSE .)
    (               reduce using rule 10 (expr -> FALSE .)
    TERM            reduce using rule 10 (expr -> FALSE .)
    STRING          reduce using rule 10 (expr -> FALSE .)
    NUMBER          reduce using rule 10 (expr -> FALSE .)
    FALSE           reduce using rule 10 (expr -> FALSE .)
    TRUE            reduce using rule 10 (expr -> FALSE .)
    ID              reduce using rule 10 (expr -> FALSE .)
    AWAIT           reduce using rule 10 (expr -> FALSE .)
    ASYNC           reduce using rule 10 (expr -> FALSE .)
    IF              reduce using rule 10 (expr -> FALSE .)
    $end            reduce using rule 10 (expr -> FALSE .)
    {               reduce using rule 10 (expr -> FALSE .)
    )               reduce using rule 10 (expr -> FALSE .)
    ,               reduce using rule 10 (expr -> FALSE .)


state 8

    (11) expr -> TRUE .
    SET             reduce using rule 11 (expr -> TRUE .)
    EQ              reduce using rule 11 (expr -> TRUE .)
    OR              reduce using rule 11 (expr -> TRUE .)
    AND             reduce using rule 11 (expr -> TRUE .)
    DIV             reduce using rule 11 (expr -> TRUE .)
    MUL             reduce using rule 11 (expr -> TRUE .)
    SUB             reduce using rule 11 (expr -> TRUE .)
    ADD             reduce using rule 11 (expr -> TRUE .)
    LT              reduce using rule 11 (expr -> TRUE .)
    GT              reduce using rule 11 (expr -> TRUE .)
    (               reduce using rule 11 (expr -> TRUE .)
    TERM            reduce using rule 11 (expr -> TRUE .)
    STRING          reduce using rule 11 (expr -> TRUE .)
    NUMBER          reduce using rule 11 (expr -> TRUE .)
    FALSE           reduce using rule 11 (expr -> TRUE .)
    TRUE            reduce using rule 11 (expr -> TRUE .)
    ID              reduce using rule 11 (expr -> TRUE .)
    AWAIT           reduce using rule 11 (expr -> TRUE .)
    ASYNC           reduce using rule 11 (expr -> TRUE .)
    IF              reduce using rule 11 (expr -> TRUE .)
    $end            reduce using rule 11 (expr -> TRUE .)
    {               reduce using rule 11 (expr -> TRUE .)
    )               reduce using rule 11 (expr -> TRUE .)
    ,               reduce using rule 11 (expr -> TRUE .)


state 9

    (12) expr -> ID .
    (28) expr -> ID . ( paramlist ) block_expr
  ! shift/reduce conflict for ( resolved as shift
    SET             reduce using rule 12 (expr -> ID .)
    EQ              reduce using rule 12 (expr -> ID .)
    OR              reduce using rule 12 (expr -> ID .)
    AND             reduce using rule 12 (expr -> ID .)
    DIV             reduce using rule 12 (expr -> ID .)
    MUL             reduce using rule 12 (expr -> ID .)
    SUB             reduce using rule 12 (expr -> ID .)
    ADD             reduce using rule 12 (expr -> ID .)
    LT              reduce using rule 12 (expr -> ID .)
    GT              reduce using rule 12 (expr -> ID .)
    TERM            reduce using rule 12 (expr -> ID .)
    STRING          reduce using rule 12 (expr -> ID .)
    NUMBER          reduce using rule 12 (expr -> ID .)
    FALSE           reduce using rule 12 (expr -> ID .)
    TRUE            reduce using rule 12 (expr -> ID .)
    ID              reduce using rule 12 (expr -> ID .)
    AWAIT           reduce using rule 12 (expr -> ID .)
    ASYNC           reduce using rule 12 (expr -> ID .)
    IF              reduce using rule 12 (expr -> ID .)
    $end            reduce using rule 12 (expr -> ID .)
    {               reduce using rule 12 (expr -> ID .)
    )               reduce using rule 12 (expr -> ID .)
    ,               reduce using rule 12 (expr -> ID .)
    (               shift and go to state 26


state 10

    (23) expr -> AWAIT . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 27

state 11

    (24) expr -> ASYNC . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 28

state 12

    (25) expr -> IF . expr block_expr rest_if
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 29

state 13

    (26) expr -> ( . expr )
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 30

state 14

    (5) top -> expr top .
    $end            reduce using rule 5 (top -> expr top .)


state 15

    (13) expr -> expr SET . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 31

state 16

    (14) expr -> expr EQ . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 32

state 17

    (15) expr -> expr OR . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 33

state 18

    (16) expr -> expr AND . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 34

state 19

    (17) expr -> expr DIV . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 35

state 20

    (18) expr -> expr MUL . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 36

state 21

    (19) expr -> expr SUB . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 37

state 22

    (20) expr -> expr ADD . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 38

state 23

    (21) expr -> expr LT . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 39

state 24

    (22) expr -> expr GT . expr
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13

    expr                           shift and go to state 40

state 25

    (27) expr -> expr ( . arglist )
    (26) expr -> ( . expr )
    (32) arglist -> . arg_item , arglist
    (33) arglist -> . arg_item
    (34) arglist -> . nothing
    (8) expr -> . STRING
    (9) expr -> . NUMBER
    (10) expr -> . FALSE
    (11) expr -> . TRUE
    (12) expr -> . ID
    (13) expr -> . expr SET expr
    (14) expr -> . expr EQ expr
    (15) expr -> . expr OR expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr SUB expr
    (20) expr -> . expr ADD expr
    (21) expr -> . expr LT expr
    (22) expr -> . expr GT expr
    (23) expr -> . AWAIT expr
    (24) expr -> . ASYNC expr
    (25) expr -> . IF expr block_expr rest_if
    (26) expr -> . ( expr )
    (27) expr -> . expr ( arglist )
    (28) expr -> . ID ( paramlist ) block_expr
    (35) arg_item -> . SYMBOL expr
    (36) arg_item -> . expr
    (1) nothing -> .
    STRING          shift and go to state 5
    NUMBER          shift and go to state 6
    FALSE           shift and go to state 7
    TRUE            shift and go to state 8
    ID              shift and go to state 9
    AWAIT           shift and go to state 10
    ASYNC           shift and go to state 11
    IF              shift and go to state 12
    (               shift and go to state 13
    SYMBOL          shift and go to state 45
    )               reduce using rule 1 (nothing -> .)

    expr                           shift and go to state 41
    arglist                        shift and go to state 42
    arg_item                       shift and go to state 43
    nothing                        shift and go to state 44

state 26

    (28) expr -> ID ( . paramlist ) block_expr
    (29) paramlist -> . ID , paramlist
    (30) paramlist -> . ID
    (31) paramlist -> . nothing
    (1) nothing -> .
    ID              shift and go to state 46
    )               reduce using rule 1 (nothing -> .)

    paramlist                      shift and go to state 47
    nothing                        shift and go to state 48

state 27
